<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCloseActivity"
        android:text="@string/settings_activity_title"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="26dp" />

    <TextView
        android:id="@+id/tv_main_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_activity_main_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <TextView
        android:id="@+id/tv_settings_url_radioGroup"
        android:layout_width="221dp"
        android:layout_height="34dp"
        android:layout_marginTop="36dp"
        android:text="@string/settings_url_radioGroup_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_msg" />

    <RadioGroup
        android:id="@+id/settings_url_radioGroup"
        android:layout_width="218dp"
        android:layout_height="114dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_url_radioGroup">

        <RadioButton
            android:id="@+id/settings_url_radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_url_radioButton1" />

        <RadioButton
            android:id="@+id/settings_url_radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_url_radioButton2" />

        <RadioButton
            android:id="@+id/settings_url_radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_url_radioButton3" />
    </RadioGroup>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCloseActivity"
        android:text="@string/settings_activity_btn_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>