<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationActivity">

    <TextView
        android:id="@+id/tvMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_activity_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="398dp"
        android:layout_height="540dp"
        app:layout_constraintBottom_toTopOf="@+id/btnOkNotificationDlg"
        app:layout_constraintTop_toBottomOf="@+id/tvMSG"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="6dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_dlg_notification_coin_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/notification_activity_coin_symbol" />

            <TextView
                android:id="@+id/tv_dlg_notification_coin_symbol_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_dlg_notification_coin_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/notification_activity_coin_price" />

            <TextView
                android:id="@+id/tv_dlg_notification_coin_price_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnOkNotificationDlg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCloseActivity"
        android:text="@string/notification_activity_btn_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>